# MogEngine

./: CMakeLists.txt  Makefile  README.md  compile_commands.json
src/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Window.cpp  main.cpp
src/Graphics/: Renderer.cpp  Shader.cpp  Shape.h
src/Math/: Vectors.h
src/Shaders/: fragment_shader.glsl  vertex_shader.glsl
src/Window/: Window.cpp  Window.h
